kubernetes-manifests/test.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: nemne-local
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: api
            port: 
              number: 8080
  - host: abc.sample.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: inference
            port:
              number: 5000
